<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".week">

    <!-- TODO: Update blank fragment layout -->
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"

       android:paddingLeft="10dp"
       android:paddingRight="10dp">
       <com.github.mikephil.charting.charts.CombinedChart
           android:id="@+id/chart1"
           android:layout_width="match_parent"
           android:layout_height="240dp"
           />
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="@color/black"
           android:textSize="22dp"
           android:paddingTop="20dp"
           android:textStyle="bold"
           android:text="@string/average" />
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingTop="15dp"
           android:orientation="horizontal">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/duration"
               android:textSize="20dp"
               
               android:layout_gravity="left"
               android:textColor="@color/black"
               />
           <TextView
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"/>

           <TextView
               android:id="@+id/sleep_duration"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="right"
               android:text="@string/duration_time"
               android:textColor="@color/black"
               android:textSize="20dp"
                />
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingTop="15dp"
           android:orientation="horizontal">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/go_to_bed"
               android:textSize="20dp"
               
               android:layout_gravity="left"
               android:textColor="@color/black"
               />
           <TextView
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"/>
           <TextView
               android:id="@+id/go_to_bed_time"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/go_to_bed_time"
               android:textColor="@color/black"
               android:textSize="20dp"
               
               android:layout_gravity="right"
               />
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingTop="15dp"
           android:orientation="horizontal">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/waking_up"
               android:textSize="20dp"
               
               android:layout_gravity="left"
               android:textColor="@color/black"
               />
           <TextView
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"/>
           <TextView
               android:id="@+id/waking_up_time"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/waking_up_time"
               android:textColor="@color/black"
               android:textSize="20dp"
               
               android:layout_gravity="right"
               />
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingTop="15dp"
           android:orientation="horizontal">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/snooze_time"
               android:textSize="20dp"
               
               android:layout_gravity="left"
               android:textColor="@color/black"
               />
           <TextView
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"/>
           <TextView
               android:id="@+id/total_time_of_snooze"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/time_of_snooze"
               android:textColor="@color/black"
               android:textSize="20dp"
               
               android:layout_gravity="right"
               />
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingTop="15dp"
           android:orientation="horizontal">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/snooze_number"
               android:textSize="20dp"
               
               android:layout_gravity="left"
               android:textColor="@color/black"
               />
           <TextView
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/number_of_times"
               android:textColor="@color/black"
               android:textSize="20dp"
               
               android:layout_gravity="right"
               />
       </LinearLayout>
       <LinearLayout
           android:paddingTop="5dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:src="@drawable/ic_info_outline_black_24dp"/>
           <TextView
               android:paddingLeft="20dp"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:text="@string/info"/>
       </LinearLayout>
   </LinearLayout>
</FrameLayout>